--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-certifi==2023.5.7
-click==8.1.3
-Flask==2.2.5
-gunicorn==20.1.0
-importlib-metadata==6.6.0
+certifi==2023.7.22
+click==8.1.7
+Flask==2.3.2
+gunicorn==21.2.0
+importlib-metadata==6.8.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-MarkupSafe==2.1.3
+Jinja2==3.1.3
+joblib==1.3.2
+MarkupSafe==2.1.5
 numpy>=1.23,<2.0
-pandas==1.3.5
+pandas==1.5.3
 pickle-mixin==1.0.2
-scikit-learn==1.0.2
-scipy==1.7.3
-threadpoolctl==3.1.0
-typing_extensions==4.6.3
-Werkzeug==2.2.3
-zipp==3.15.0
+scikit-learn==1.3.2
+scipy>=1.9,<2.0
+threadpoolctl==3.2.0
+typing_extensions==4.8.0
+Werkzeug==2.3.8
+zipp==3.17.0
